fixed corner radius on mobile

--- a/static/main.css
+++ b/static/main.css
@@ -1,1 +1,68 @@
-body{font-family:sans-serif;background-color:#00f;margin:0;text-align:center;color:#fff;font-family:roboto-mono,sans-serif;font-size:2em}h1{font-family:fit-condensed;font-weight:300;font-size:20em;margin:0 10px 10px}.text{display:block;width:68%;text-align:left;margin:0 auto}#content{margin:0;width:100vw}canvas{image-rendering:pixelated;margin:1em 0}input{border:none;width:20vw;height:20vw;background:none;margin-top:20px}.inputs-cont{width:68%;margin:0 auto;display:flex;justify-content:space-around}.button-cont{background-color:#fff;font-weight:700;width:min-content;color:#000;padding:25px;text-align:center;margin-bottom:3em}.power{background-color:#fff;color:#00f;text-decoration:none;padding:10px;margin-bottom:2em}.power:hover{padding:30px}.shift{border-left:1em blue solid;padding-left:11px;padding-top:30px;padding-bottom:30px}
+body {
+   font-family: sans-serif;
+   background-color: #00f;
+   margin: 0;
+   text-align: center;
+   color: #fff;
+   font-family: roboto-mono, sans-serif;
+   font-size: 2em;
+}
+h1 {
+   font-family: fit-condensed;
+   font-weight: 300;
+   font-size: 20em;
+   margin: 0 10px 10px;
+}
+.text {
+   display: block;
+   width: 68%;
+   text-align: left;
+   margin: 0 auto;
+}
+#content {
+   margin: 0;
+   width: 100vw;
+}
+canvas {
+   image-rendering: pixelated;
+   margin: 1em 0;
+}
+input {
+   border: none;
+   border-radius: 0;
+   width: 20vw;
+   height: 20vw;
+   background: none;
+   margin-top: 20px;
+}
+.inputs-cont {
+   width: 68%;
+   margin: 0 auto;
+   display: flex;
+   justify-content: space-around;
+}
+.button-cont {
+   background-color: #fff;
+   font-weight: 700;
+   width: min-content;
+   color: #000;
+   padding: 25px;
+   text-align: center;
+   margin-bottom: 3em;
+}
+.power {
+   background-color: #fff;
+   color: #00f;
+   text-decoration: none;
+   padding: 10px;
+   margin-bottom: 2em;
+}
+.power:hover {
+   padding: 30px;
+}
+.shift {
+   border-left: 1em blue solid;
+   padding-left: 11px;
+   padding-top: 30px;
+   padding-bottom: 30px;
+}
