--- a/web src/src/styles.css
+++ b/web src/src/styles.css
@@ -32,6 +32,7 @@ canvas {
 }
 input {
    border: none;
+   border-radius: 0;
    width: 20vw;
    height: 20vw;
    background: none;
